chore: proof of concept aria-label works

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
+<button type="button" underline aria-label="Underlined Button - Deprecated aria-label's works!">Underlined Button - Deprecated</button>
+<app-ui-button-underline aria-label="Underlined button's aria-label works!" routerLink="/test-a-page">Underlined button</app-ui-button-underline>
+<app-ui-button-bold aria-label="Bold button's aria-label works!" routerLink="/test-a-page">Bold button</app-ui-button-bold>
+
 <router-outlet></router-outlet>
-<button underline>Depreceated</button>
-<app-ui-button-underline>Underlined button</app-ui-button-underline>
-<app-ui-button-bold>Bold button</app-ui-button-bold>
